fixed deprecated reflection API usage